cabal-version:      2.4
name:               aoc
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             joshcbrown
maintainer:         80245312+joshcbrown@users.noreply.github.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Cli,
                      Day1,
                      Day2,
                      Day3,
                      Day4,
                      Day5,
                      Day6,
                      Common

    -- Modules included in this library but not exported.
    -- other-modules:

    default-extensions: OverloadedStrings
    ghc-options: -Wall
    build-depends:    base ^>=4.17.2.0,
                      optparse-applicative ^>=0.18.1.0,
                      split ^>=0.2.4,
                      attoparsec,
                      containers,
                      vector,
                      text
    hs-source-dirs:   src
    default-language: Haskell2010

executable aoc
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        aoc

    hs-source-dirs:   app
    default-language: Haskell2010
